--- a/index.html
+++ b/index.html
@@ -3,20 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - Câm-Vi Nguyen</title>
+    <title>Câm-Vi Nguyen</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
+            font-family: Lato;
             background-color: #f4f4f9;
         }
         h1 {
-            color: #333;
-            font-size: 3em;
+            color: black;
+            font-size: 30 px;
         }
     </style>
 </head>
