--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
 </head>
 <body>
     <h1>Câm-Vi Nguyen</h1>
+    <a href="index.html">Accueil</a>
+    <a href="projet.html">Tous mes projets</a>
 </body>
 </html>
