--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,9 +16,11 @@
         }
     </style>
 </head>
+    
 <body>
     <h1>Câm-Vi Nguyen</h1>
     <a href="index.html">Accueil</a>
     <a href="projet.html">Tous mes projets</a>
+    <p>Bienvenue sur mon portfolio !<br>Je m'appelle Câm-Vi et je suis étudiante en L3 MIAGE à l'Université Paris 1 Panthéon-Sorbonne et en parralèle à l'Ecole 42.</p>
 </body>
 </html>
