--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     <a href="index.html">Accueil</a>
     <a href="projet.html">Tous mes projets</a>
     <p>Je m'appelle Câm-Vi et j'ai commencé à coder à 17 ans. Je me forme dans plusieurs langages de programmation/technologies.</p>
-    <p>Je suis actuellement en L3 MIAGE à <strong>l'Université Paris 1 Panthéon-Sorbonne</strong> et je suis en parallèle le cursus de <strong></strong>l'École 42 Paris</strong>.</p>
+    <p>Je suis actuellement étudiante en L3 MIAGE à <strong>l'Université Paris 1 Panthéon-Sorbonne</strong> et je suis en parallèle le cursus de <strong>l'École 42 Paris</strong>.</p>
 </body>
 </html>
