--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     <a href="projet.html">Tous mes projets</a>
     <p>Je m'appelle Câm-Vi et j'ai commencé à coder à 17 ans. Je me forme dans plusieurs langages de programmation/technologies.</p>
     <p>Je suis actuellement étudiante en L3 MIAGE à <strong>l'Université Paris 1 Panthéon-Sorbonne</strong> et je suis en parallèle le cursus de <strong>l'École 42 Paris</strong>.</p>
-    <img src="/img/pic.JPG" alt="Câm-Vi Nguyen"/>
+    <!-- img src="/img/pic.JPG" alt="Câm-Vi Nguyen"/ -->
 </body>
 </html>
