--- a/index.html
+++ b/index.html
@@ -10,19 +10,23 @@
             font-family: Lato;
             background-color: #f4f4f9;
         }
+
         h1 {
             color: black;
             font-size: 30 px;
         }
     </style>
 </head>
-    
+
 <body>
     <h1>Câm-Vi Nguyen</h1>
     <a href="index.html">Accueil</a>
     <a href="projet.html">Tous mes projets</a>
-    <p>Je m'appelle Câm-Vi et j'ai commencé à coder à 17 ans. Je me forme dans plusieurs langages de programmation/technologies.</p>
-    <p>Je suis actuellement étudiante en L3 MIAGE à <strong>l'Université Paris 1 Panthéon-Sorbonne</strong> et je suis en parallèle le cursus de <strong>l'École 42 Paris</strong>.</p>
+    <p>Je m'appelle Câm-Vi et j'ai commencé à coder à 17 ans. Je me forme dans plusieurs langages de
+        programmation/technologies.</p>
+    <p>Je suis actuellement étudiante en L3 MIAGE à <strong>l'Université Paris 1 Panthéon-Sorbonne</strong> et je suis
+        en parallèle le cursus de <strong>l'École 42 Paris</strong>.</p>
     <!-- img src="/img/pic.JPG" alt="Câm-Vi Nguyen"/ -->
 </body>
+
 </html>
