--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="description"
+        content="Je suis actuellement étudiante en L3 MIAGE à l'Université Paris 1 Panthéon-Sorbonne et je suis en parallèle le cursus de l'École 42 Paris.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Câm-Vi Nguyen - Développeuse</title>
     <style>
